# Decision-Sciences

./: README.md  pyproject.toml
ETL/: download_from_WDI.py  etl_preprocess_and_summary.py  summary_report.md
data/: ev_adoption_v2.csv
data/processed/: country_coverage_by_series.csv  panel_target.csv  series_name_map.csv  wide_clean.csv  wide_raw.csv
data/processed/summary_after/: correlations.csv  summary_statistics.csv
data/processed/summary_first/: country_series_gaps.csv  recommendations.csv  series_coverage.csv  stats_preview.csv
model_results/: compare_10years.csv  metrics_fe.csv  metrics_xgb.csv  model_fe.pkl  model_xgb.json  predictions_fe.csv  predictions_xgb.csv  scenario_xgb_10pct.csv
model_results/classifier/: logit_model.pkl  metrics_classifier.csv  scaler.pkl  xgb_classifier_model.json
model_results/ev50/: ev50_results.csv  ev50_results_capped.csv  ev50_sensitivity_capped.csv  ev50_top_abs.csv  ev50_top_pct.csv
model_results/fe/: elasticity_table.csv  metrics.csv  model_summary.txt  predictions_full.csv  scenario_gdp_plus10pct.csv
model_results/renew/: renew_5y_country_results.csv  renew_5y_global_summary.csv  renew_5y_priorities.csv
models/: EV50.md  REPORT_CO2_CLASSIFIER.md  REPORT_CO2_MODELS.md  REPORT_RENEW_SCENARIO.md  STRATEGIC_RENEWABLE_REPORT.md  classify_10years.py  co2_classifier.py  co2_models.py  ev50_scenario.py  fe_log_log_model.py  helpers.py  positive_and_shap_tables.py  renew_invest_scenario.py
notebooks/: ev_adoptionv2.ipynb
